man: Add an explicit Ubuntu URL example

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -356,9 +356,13 @@ Some distro specific url samples:
 
 http://download.fedoraproject.org/pub/fedora/linux/releases/21/Server/x86_64/os
 
-=item Debian/Ubuntu
+=item Debian
 
 http://ftp.us.debian.org/debian/dists/stable/main/installer-amd64/
+
+=item Ubuntu
+
+http://us.archive.ubuntu.com/ubuntu/dists/wily/main/installer-amd64/
 
 =item Suse
 
