--- a/INSTALL
+++ b/INSTALL
@@ -35,7 +35,9 @@ Earliest tested versions of major components:
   pygobject3 >= 3.4
   libosinfo >= 0.2.10
 
-A more detailed dependency list can be found in virt-manager.spec.in. On
-Debian based distributions you need to install the gobject-introspection
-bindings for some depedencies like libvirt-glib and libosinfo. Look for
-package names that start with 'gir'.
+A more detailed dependency list can be found in virt-manager.spec.in.
+
+On Debian or Ubuntu based distributions, you need to install the
+gobject-introspection bindings for some depedencies like libvirt-glib
+and libosinfo. Look for package names that start with 'gir', for example
+gir1.2-libosinfo-1.0
