--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1629,7 +1629,7 @@ Run a Live CD image under Xen fullyvirt, in diskless environment
        --hvm \
        --name demo \
        --memory 500 \
-       --disks none \
+       --disk none \
        --livecd \
        --graphics vnc \
        --cdrom /root/fedora7live.iso
