--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
  Virtual Machine Manager News
  ============================
 
+Release 1.3.1 (December 06, 2015)
+---------------------------------
+- Fix command line API on RHEL7 pygobject
+
 Release 1.3.0 (November 24, 2015)
 ---------------------------------
 - Git hosting moved to http://github.com/virt-manager/virt-manager
