--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
  Virtual Machine Manager News
  ============================
 
+Release 1.3.2 (December 24, 2015)
+---------------------------------
+- Fix dependency issues with vte
+
 Release 1.3.1 (December 06, 2015)
 ---------------------------------
 - Fix command line API on RHEL7 pygobject
