man: virt-install: Fix typo (bz 1313101)

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -419,7 +419,7 @@ file:
 =item B<--os-variant> OS_VARIANT
 
 Optimize the guest configuration for a specific operating system (ex.
-'fedora18', 'rhel7', 'winxp'). While not requires, specifying this
+'fedora18', 'rhel7', 'winxp'). While not required, specifying this
 options is HIGHLY RECOMMENDED, as it can greatly increase performance
 by specifying virtio among other guest tweaks.
 
