virtinst: add virtio device model and accel3d attribute
Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1339,7 +1339,7 @@ Use --console=? to see a list of all available sub options. Complete details at 
 
 Specify what video device model will be attached to the guest. Valid values
 for VIDEO are hypervisor specific, but some options for recent kvm are
-cirrus, vga, qxl, or vmvga (vmware).
+cirrus, vga, qxl, virtio, or vmvga (vmware).
 
 Use --video=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsVideo>
 
