virtinst: add listen=none graphics option
Add a special listen value to disable any extra display server listening
socket. This is necessary now that qemu prevents starting a spice+virgl
VM with listening sockets (until spice allows remoting with virgl).

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -964,8 +964,13 @@ Specify the spice tlsport.
 Address to listen on for VNC/Spice connections. Default is typically 127.0.0.1
 (localhost only), but some hypervisors allow changing this globally (for
 example, the qemu driver default can be changed in /etc/libvirt/qemu.conf).
-Use 0.0.0.0 to allow access from other machines. This is use by 'vnc' and
-'spice'
+Use 0.0.0.0 to allow access from other machines.
+
+Use 'none' to specify that the display server should not listen on any
+port. The display server can be accessed only locally through
+libvirt unix socket (virt-viewer with --attach for instance).
+
+This is used by 'vnc' and 'spice'
 
 =item B<keymap>
 
