cli: Add --disk backing_format= option

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -622,6 +622,10 @@ and to avoid I/O errors in the guest should the host filesystem fill up.
 
 Path to a disk to use as the backing store for the newly created image.
 
+=item B<backing_format>
+
+Disk image format of B<backing_store>
+
 =item B<cache>
 
 The cache mode to be used. The host pagecache provides cache memory.
